set01/problem01_compile_errors.txt
Compilation started at 11/3/2023, 11:28:28 PM
Compilation finished at 11/3/2023, 11:28:28 PM
Compilation started at 11/3/2023, 11:28:58 PM
Compilation finished at 11/3/2023, 11:28:59 PM
Compilation started at 11/3/2023, 11:30:18 PM
c:\Users\dualf\github-classroom\FPC-advanced\fpc-BlackCat-klein\set01\problem01.c: In function 'main':
c:\Users\dualf\github-classroom\FPC-advanced\fpc-BlackCat-klein\set01\problem01.c:6:26: error: expected ';' before 'return'
    6 |     printf("Santhosh \n")
      |                          ^
      |                          ;
    7 |     return 0;
      |     ~~~~~~                
Compilation finished at 11/3/2023, 11:30:18 PM
Compilation started at 11/3/2023, 11:30:35 PM
Compilation finished at 11/3/2023, 11:30:35 PM
Compilation started at 11/5/2023, 5:24:28 PM
Compilation finished at 11/5/2023, 5:24:30 PM
Compilation started at 11/5/2023, 5:24:48 PM
c:\Users\dualf\github-classroom\FPC-advanced\fpc-BlackCat-klein\set01\problem01.c: In function 'main':
c:\Users\dualf\github-classroom\FPC-advanced\fpc-BlackCat-klein\set01\problem01.c:6:26: error: expected ';' before 'return'
    6 |     printf("Santhosh \n")
      |                          ^
      |                          ;
    7 |     return 0;
      |     ~~~~~~                
Compilation finished at 11/5/2023, 5:24:49 PM
Compilation started at 12/19/2023, 12:51:41 PM
'gcc' is not recognized as an internal or external command,
operable program or batch file.
Compilation finished at 12/19/2023, 12:51:41 PM
Compilation started at 12/19/2023, 1:13:25 PM
Compilation finished at 12/19/2023, 1:13:28 PM
